--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: update awesome-stars
 on:
   workflow_dispatch:
   schedule:
-  - cron: */1 * * * *
+  - cron: * * * * *
 jobs:
   awesome-stars:
     name: update awesome-stars
