--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: update awesome-stars
 on:
   workflow_dispatch:
   schedule:
-  - cron: 0 10 * * 1
+  - cron: 0 10 * * *
 jobs:
   awesome-stars:
     name: update awesome-stars
